--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
   }
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
@@ -74,8 +74,17 @@
     @apply bg-background text-foreground;
     overflow-x: hidden;
   }
+} */
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
-
+html,body{
+height: 100%;
+width: 100%;
+/* overflow: hidden; */
+}
 .red {
   border: 1px solid red;
 }
